# project1_kharlamov_vladislav_dpo

./: .gitignore  Makefile  README.md  pyproject.toml  setup.py
labyrinth_game/: constants.py  main.py  player_actions.py  utils.py
my_setup.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
