[tool.poetry]
name = "project1-kharlamov-vladislav-dpo"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
packages =[{include='labyrinth_game'}]
readme = "README.md"

[tool.poetry.scripts]
project = "labyrinth_game.main:main"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
